# Rubix-Cube-Solver

./: .env  .gitignore  README.md  build.sh  package-lock.json  package.json  render.yaml  vercel.json  vite.config.js
backend/: CMakeLists.txt  Makefile
backend/kociemba_api/: CMakeLists.txt  requirements.txt  setup.py
backend/kociemba_api/kociemba-custom/: kociemba-solver  makefile
backend/kociemba_api/kociemba-custom/src/: main.cpp
backend/kociemba_api/src/: __init__.py  coordcube.h  enhanced_kociemba_solver.py  fix_import.py  kociemba_custom_solver.py  kociemba_solver.cpp  kociemba_solver.h  kociemba_wrapper.cpp  kociemba_wrapper.py  kociemba_wrapper_fixed.py  main.py  main_old.py  test_backend.py
backend/kociemba_api/src/solver/: cube.cpp  cube.h  cubiecube.h  facelet.h  run_solver  run_solver.cpp  solver.cpp  solver.h
backend/kociemba_api/src/static/: index.html
backend/src/: App.jsx  CMakeLists.txt  Makefile  RubiksCube.jsx  cubeState.js  custom_cube_solver.cpp  custom_cube_solver.h  debug_cube.cjs  debug_cube.js  kociemba_solver.h  python_wrapper.py  test_cube.js  test_kociemba  test_kociemba.cpp  test_solver.cpp
src/: App.css  App.jsx  CubeConfigurator.css  CubeConfigurator.jsx  Makefile  RubiksCube.jsx  RubiksCube.jsx.backup  VideoInput.css  VideoInput.jsx  colorDetection.js  cubeState.js  index.css
